# Kaira

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  __init__.py  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.py
api/: server.py
config/: __init__.py
core/: __init__.py  interfaces.py
data/: annotated_eval.csv  annotation_guide.md  default_policy.json  default_runtime.json  mini_ontology.json
docs/: architecture.md  demo.md  evaluation.md  memory.md  ontology.md  policies.md  runtime.md
eval/: README.md  __init__.py  benchmarks.py  golden_traces.py  metrics.py  run_experiment.py
eval/results/: benchmark_summary.csv  benchmark_summary.json  confusion_like_summary.json  latency_summary.json  metrics_table.md  per_case_results.jsonl  refusal_escalation_traces.json  sample_traces.json  single_prompt_trace.json
examples/: answered_trace.json  escalated_trace.json
experiments/: README.md  ablation_study.ipynb  run_experiment.py  statistical_tests.py
kaira/api/: __init__.py  (+1 more)
memory/: commit_policy.py  semantic_core.py
ontology/: __init__.py  graph_ops.py
paper/: README.md  kaira_arxiv.tex  kaira_refs.bib
policies/: permissions.py  router.py
runtime/: controller.py  decision.py  generator.py  idl.py
src/: README.md  epistemic_layer.py  idl_engine.py  meaning_function.py
tests/: __init__.py  _helpers.py  test_ecl.py  test_eval_metrics.py  test_golden_scenarios.py  test_handoff.py  test_idl.py  test_memory.py  test_router.py  test_validator.py
ui/: __init__.py
utils/: __init__.py  config.py
(+18 files in other folders)
