[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaira"
version = "0.3.0"
description = "KAIRA runtime governance prototype for bounded LLM deployment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "numpy==1.26.4",
  "pandas==2.2.1",
  "scikit-learn==1.4.1.post1",
  "scipy==1.12.0",
  "PyYAML==6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "ruff==0.12.10",
  "black==25.1.0",
  "mypy==1.17.1"
]

[tool.setuptools.packages.find]
include = ["kaira*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
